--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ body::-webkit-scrollbar-thumb {
     font-size: 14px;
     line-height: 27px;
     letter-spacing: 1px;
+    display: flex;
 }
 .service i{
     color: #555;
@@ -404,6 +405,7 @@ body::-webkit-scrollbar-thumb {
     border-color: #333 transparent transparent;
     margin-left: -166px;
     margin-top: 44px;
+    display: flex;
 }
 .contact form{
     padding-top: 25px;
@@ -418,7 +420,7 @@ body::-webkit-scrollbar-thumb {
 }
 .contact form .btn-pr:hover{
     color: #333;
-    background-color: #fff;
+    background-color: rgb(134, 20, 20);
 }
 /* bootstrap Contact */
 .form-text{
