--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ body::-webkit-scrollbar-thumb {
     font-weight: 600;
     letter-spacing: 1px;
 }
+.form-text
+{
+text-align: center;
+
+}
 .navbar-brand span{
     font-size: 17px;
 }
@@ -141,6 +146,16 @@ body::-webkit-scrollbar-thumb {
     color: #fff;
     text-decoration: none;
 }
+
+.form-text 
+{
+    text-align: center;
+}
+
+.contact19 {
+   
+
+}
 .angle-down i{
     font-size: 3em;
     animation: cd-translate  2.5s ease-in-out infinite;
@@ -233,26 +248,35 @@ body::-webkit-scrollbar-thumb {
     text-align: justify;
 }
 
+.row {
+    align-items: right;
+    text-align: right;
+}
+
 .service .row h2 strong{
     font-size: 24px;
     letter-spacing: 20px;
-    text-align: justify;
+    text-align: right;
     text-underline-offset: 0;
+
 }
 .service .row h4{
     font-size: 18px;
     font-weight: 600;
+    align-items: right;
+    text-align: right;
 }
+
 .service .row .sub-text{
     font-size: 14px;
     line-height: 27px;
     letter-spacing: 1px;
-    display: flex;
+    text-align: right;
 }
 .service i{
     color: #555;
     margin-bottom: 15px;
-    text-align: justify;
+    text-align: right;
 }
 /*----------------------------------------------------
                   End Service
@@ -405,9 +429,11 @@ body::-webkit-scrollbar-thumb {
     margin-left: -166px;
     margin-top: 44px;
     display: flex;
+    text-align: center;
 }
 .contact form{
     padding-top: 25px;
+    text-align: center;
 }
 .contact form .btn-pr{
     background: #2c2c2c;
@@ -416,10 +442,12 @@ body::-webkit-scrollbar-thumb {
     font-size: 18px;
     border: 1px solid #7b7b7b;
     margin-top: 20px;
+    text-align: center;
 }
 .contact form .btn-pr:hover{
     color: #333;
     background-color: rgb(134, 20, 20);
+    text-align: center;
 }
 /* bootstrap Contact */
 .form-text{
@@ -441,18 +469,42 @@ body::-webkit-scrollbar-thumb {
 .data-contact {
     font-size: 15px;
     margin: 18px 0;
+    text-align: center;
 }
+.form-messages {
+    text-align: center;
+}
+div {text-align: center;}
 .data-contact p{
     line-height: 1.7;
+    text-align: center;
 }
 .data-contact-text{
     margin-top: 20px;
+    text-align: center;
+}
+div.data-contact:nth-child(2)
+{
+    text-align: center;
 }
 .data-contact-text .number{
     margin-bottom: 5px;
+    text-align: center;
 }
 .form-success{
+    text-align: center;
     display: none;
+}
+.data-contact-text p {
+text-align: center;
+}
+
+#contact > div:nth-child(1) {
+    text-align: center;
+}
+
+.form-text {
+    text-align: right;
 }
 /***********************
     End Contact
