--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,8 @@ text-align: center;
     margin-top: 44px;
     display: flex;
     text-align: center;
+    text-decoration: underline   #ffd700;
+};
 }
 .contact form{
     padding-top: 25px;
@@ -448,6 +450,10 @@ text-align: center;
     color: #333;
     background-color: rgb(134, 20, 20);
     text-align: center;
+}
+
+#about > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) > img:nth-child(1) {
+    margin-right: 20px;
 }
 /* bootstrap Contact */
 .form-text{
