--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,11 @@ text-align: center;
     margin-top: 25px;
     border-style: solid;
 }
+
+.codeWrite {
+    width: 87%;
+   
+}
 .about .container  img{
     max-width: 100%;
     height: auto;
