woooop there it is

--- a/css/style.css
+++ b/css/style.css
@@ -510,8 +510,8 @@ div.col-xs-12:nth-child(8) > img:nth-child(1) {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
-    height: 70%;
+   height: 240px;
+   width: 350px;
 }
 /* bootstrap Contact */
 .form-text{
