--- a/css/style.css
+++ b/css/style.css
@@ -741,6 +741,10 @@ p{
   animation-delay: -1.0s;
 }
 
+.particles-js-canvas-el {
+    
+}
+
 @-webkit-keyframes sk-rotate { 100% { -webkit-transform: rotate(360deg) }}
 @keyframes sk-rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
 
