--- a/css/style-particles.css
+++ b/css/style-particles.css
@@ -58,9 +58,9 @@ canvas{
   height: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.73);
-  background-blend-mode: overlay;  background-size: cover;
+  background-blend-mode: overlay; 
+  background-size: cover;
   background-position: 50% 50%;
-  background-attachment: fixed;
   background-repeat: no-repeat;
 }
 @media only screen and (max-width: 370px) {
