--- a/css/style.css
+++ b/css/style.css
@@ -695,8 +695,8 @@ textarea {
 }
 
 div.col-xs-12:nth-child(7) > img:nth-child(1) {
+    width: 300x;
     height: 250px;
-    width:  300px;
 }
 
 #form_button {
