--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     overflow-x: hidden;
     width: 100%;
     height: 100%;
+
 }
 /* green scrolling */
 body::-webkit-scrollbar {
@@ -265,6 +266,7 @@ div.col-md-4:nth-child(1) > img:nth-child(1) {
     padding-bottom: 12px;
     margin-top: 25px;
     border-style: solid;
+    font-family: 'Raleway', sans-serif !important;
 }
 
 .codeWrite {
@@ -576,6 +578,7 @@ textarea {
   max-width: 720px;
   margin: 60px auto;
   position: relative;
+  font-family: 'Raleway', sans-serif;
 }
 
 form {
@@ -656,6 +659,12 @@ input[type='text']:focus, [type='email']:focus, textarea:focus {
 
 #container > h1:nth-child(1) {
     text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+}
+
+.name {
+    font-family: 'Raleway', sans-serif !important;
+    text-decoration: lemonchiffon;
 }
 
 select {
