--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,10 @@ div.col-md-4:nth-child(1) > img:nth-child(1) {
    
 }
 
+.textarea {
+    border-bottom: solid 1px #474544 !important;
+}
+
 #container {
     border: none !important;
 }
@@ -635,9 +639,9 @@ h1 {
 input[type='text'], [type='email'], select, textarea {
 	background: none;
   border: none;
-	border-bottom: solid 2px #474544;
+	border-bottom: solid 1.2px #474544;
 	color: #474544;
-	font-size: 1.000em;
+	font-size: .93em;
   font-weight: 400;
   letter-spacing: 1px;
 	margin: 0em 0 1.875em 0;
@@ -654,6 +658,7 @@ input[type='text'], [type='email'], select, textarea {
 	-ms-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
+    font-family: 'Raleway', sans-serif !important;
 }
 
 input[type='text']:focus, [type='email']:focus, textarea:focus {
@@ -731,12 +736,12 @@ div.col-xs-12:nth-child(7) > img:nth-child(1) {
 
 #form_button {
   background: none;
-  border: solid 2px #474544;
+  border: solid 1.4px #474544;
   color: #474544;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Helvetica', Arial, sans-serif;
-  font-size: 0.875em;
+  font-family: 'Raleway', sans-serif;
+  font-size: 0.800em;
   font-weight: bold;
   outline: none;
   padding: 20px 35px;
