--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1778,6 +1778,12 @@ pre code {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
+
+   .col-xs-12 {
+  align-items: center !important;
+  
+}
+
   .col-sm-12 {
     width: 100%;
   }
@@ -1814,6 +1820,8 @@ pre code {
   .col-sm-1 {
     width: 8.33333333%;
   }
+
+
   .col-sm-pull-12 {
     right: 100%;
   }
