--- a/html/css/style.css
+++ b/html/css/style.css
@@ -30,6 +30,7 @@ html {
 	overflow-x: hidden;
 	padding: 0px;
 	margin: 0px
+
 }
 body{
 	overflow-x: hidden;
@@ -41,7 +42,7 @@ body{
 	word-wrap: break-word;
 	font-weight: 400;
 	background-color: #f6fbff;
-	color: #7d7789;
+	color: #323233;
 }
 svg{
 	fill: currentcolor;
