--- a/html/css/style.css
+++ b/html/css/style.css
@@ -424,6 +424,7 @@ h6 { font-size: 16px; }
 	clear: both;
 	float: left;
 	margin-bottom: 50px;
+	font-size: 1.4rem;
 }
 .cavani_tm_mobile_menu .menu_list ul{
 	margin: 0px;
