--- a/html/css/style.css
+++ b/html/css/style.css
@@ -579,7 +579,7 @@ h6 { font-size: 16px; }
 	height: 100%;
 	display: flex;
 	align-items: center;
-	background-color: #e7e7e7;
+	background-color: #c3c3c3;
 }
 .cavani_tm_home .content{
 	padding-left: 100px;
@@ -619,11 +619,12 @@ h6 { font-size: 16px; }
 	text-decoration: none;
 	color: #fff;
 	display: inline-block;
-	background-color: #333;
+	background-color:#243aee;
 	padding: 13px 38px;
-	border: 2px solid #333;
+	border: 2px solid #243aee;
 	font-family: "Poppins";
 	font-weight: 500;
+	
 	
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
