--- a/html/css/style.css
+++ b/html/css/style.css
@@ -619,9 +619,9 @@ h6 { font-size: 16px; }
 	text-decoration: none;
 	color: #fff;
 	display: inline-block;
-	background-color:#243aee;
+	background-color: #333;
 	padding: 13px 38px;
-	border: 2px solid #243aee;
+	border: 2px solid color #333;
 	font-family: "Poppins";
 	font-weight: 500;
 	
