--- a/html/css/style.css
+++ b/html/css/style.css
@@ -579,7 +579,7 @@ h6 { font-size: 16px; }
 	height: 100%;
 	display: flex;
 	align-items: center;
-	background-color: #c3c3c3;
+	background-color: #f5f5f5;
 }
 .cavani_tm_home .content{
 	padding-left: 100px;
