--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1310,6 +1310,10 @@ h6 { font-size: 16px; }
 	     -o-transition: all .3s ease;
 	        transition: all .3s ease;
 }
+
+.button101 {
+	font-size: 9rem !important;
+}
 .cavani_tm_portfolio .portfolio_list ul li .list_inner:hover .icon{
 	top: 20px;
 }
