--- a/html/css/style.css
+++ b/html/css/style.css
@@ -686,8 +686,7 @@ h6 { font-size: 16px; }
 	content: "";
 	width: 5000px;
 	height: 1px;
-	background-color: #7d7789;
-	left: 100%;
+	background-color: #243aee;
 	top: 50%;
 	transform: translateY(-50%);
 	margin-left: 30px;
@@ -848,7 +847,7 @@ h6 { font-size: 16px; }
 }
 .progress_inner .background .bar_in{
 	height:100%;
-	background:#7d7789;
+	background:#243aee;
 	width:0px;
 	overflow:hidden;
 }
