--- a/html/css/style.css
+++ b/html/css/style.css
@@ -607,7 +607,7 @@ h6 { font-size: 16px; }
 }
 .cavani_tm_home .job b{
 	font-weight:600;
-	color: #333;
+	color: #243aee;
 }
 .cavani_tm_button{
 	width: 100%;
