--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,7 @@ body.light hr.separator {
 }
 .home .bg {
 
-  background-image: url(/assets/headshot.PNG);
+  background-image: url(/assets/memee.jpeg);
   background-repeat: no-repeat;
    background-repeat: no-repeat;
   background-position: center;
